--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>it.hoxija</groupId>
     <artifactId>PlayerWanted</artifactId>
-    <version>1.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -22,6 +22,11 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+
+        <repository>
+            <id>repo</id>
+            <url>https://repo.mattstudios.me/artifactory/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -31,13 +36,6 @@
             <artifactId>spigot-api</artifactId>
             <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>fr.minuskube.inv</groupId>
-            <artifactId>smart-invs</artifactId>
-            <version>1.2.7</version>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -88,6 +86,12 @@
             <version>2.2.1</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>dev.triumphteam</groupId>
+            <artifactId>triumph-gui</artifactId>
+            <version>3.0.5</version> <!-- replace version here -->
+        </dependency>
     </dependencies>
 
     <build>
@@ -106,10 +110,6 @@
                 <configuration>
                     <relocations>
                         <relocation>
-                            <pattern>fr.minuskube.inv</pattern>
-                            <shadedPattern>it.ivirus.playerwanted.lib</shadedPattern>
-                        </relocation>
-                        <relocation>
                             <pattern>com.zaxxer</pattern>
                             <shadedPattern>it.ivirus.playerwanted.lib</shadedPattern>
                         </relocation>
@@ -120,6 +120,10 @@
                         <relocation>
                             <pattern>net.kyori</pattern>
                             <shadedPattern>it.ivirus.playerwanted.lib</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>dev.triumphteam.gui</pattern>
+                            <shadedPattern>it.ivirus.playerwanted.lib.gui</shadedPattern> <!-- Replace package here here -->
                         </relocation>
                     </relocations>
                 </configuration>
