--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ main: it.ivirus.playerwanted.PlayerWantedMain
 version: ${project.version}
 api-version: 1.13
 author: iVirus
+softdepend:
+  - Vault
 commands:
   wanted:
     description: Main command
